--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,9 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/security_practice?useSSL=false
 spring.datasource.username=js
 spring.datasource.password=wnstjr4231!
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+server.servlet.session.timeout=30m
+
+spring.mustache.servlet.expose-request-attributes=true
